--- a/components/GridToolBox/style.css
+++ b/components/GridToolBox/style.css
@@ -236,20 +236,20 @@
 
 @media only screen and (min-device-width: 280px) and (max-device-width: 420px) {
     .table {
-width: 55%;
-height: auto;
-flex-direction: column;
-align-items: flex-start;
-padding-bottom: 10px;
+        width: 55%;
+        height: auto;
+        flex-direction: column;
+        align-items: flex-start;
+        padding-bottom: 5px;
     }
 }
 
 @media only screen and (min-device-width: 421px) and (max-device-width: 429px) {
     .table {
-width: 46%;
-height: auto;
-flex-direction: column;
-padding-bottom: 10px;
+        width: 48%;
+        height: auto;
+        flex-direction: column;
+        padding-bottom: 5px;
     }
 
     .toolbarWrap .pullRight {
@@ -260,10 +260,10 @@ text-align: -webkit-center;
 
 @media only screen and (min-device-width: 430px) and (max-device-width: 589px) {
     .table {
-width: 70%;
-height: auto;
-flex-direction: column;
-padding-bottom: 10px;
+        width: 70%;
+        height: auto;
+        flex-direction: column;
+        padding-bottom: 5px;
     }
 
     .toolbarWrap .pullRight {
@@ -273,10 +273,9 @@ padding-bottom: 10px;
 
 @media only screen and (min-device-width: 590px) and (max-device-width: 669px) {
     .table {
-width: 80%;
-height: auto;
-flex-direction: column;
-padding-bottom: 10px;
+        width: 80%;
+        height: auto;
+        flex-direction: column;
+        padding-bottom: 5px;
     }
-} 
-
+}
